# P6_Software

./: .gitignore  README.md
Analysis/: analysis.py  analysis.xlsx  bm_analysis.csv  bm_thread.csv  empty_book.xlsx
Benchmark Management/: Analysis_v1_05.py  Analysis_v1_1_beta.py  Benchmark_And_Reporter_v1_2.py  Benchmark_And_Reporter_v1_3.py  Clock_Drift_Analysis_v1_1.py  Config - Kopie.xlsx  Config.xlsx  Configurator_v1_0.py  Flasher_Auto_no_Skip_v1_0.py  ot_benchmark.py
Benchmark Managment/: Analysis_Data_Test.csv  Analysis_v1_0.py  Benchmark_And_Reporter_v1_1.py  Benchmark_And_Reporter_v1_2.py  Config.xlsx  Configurater_v1_0.py  Configurator_v1_0.py  Flasher_v1_0.py  Reporter_v1_0.py  Results.xlsx  Results_from_Thread.csv  bm_thread.csv  old_Config.xlsx  ot_benchmark.py  ot_bm_result 16.26 30-07-2020.csv
Bluetooth/: CMakeLists.txt  README.md  bluetooth_mesh_benchmark.emProject  bluetooth_mesh_benchmark.emSession  bluetooth_mesh_benchmark.json  cmake_install.cmake
Bluetooth/BSN/: CMakeLists.txt  prj.conf
Bluetooth/BSN/include/: Timer_sync.h  bm_blemesh.h  bm_blemesh_model_handler.h  bm_cli.h  bm_config.h  bm_gen_onoff.h  bm_gen_onoff_srv.h  bm_log.h  bm_rand.h  bm_report.h  bm_simple_buttons_and_leds.h  bm_statemachine.h  bm_timesync.h  const.h  simple_buttons_and_leds.h
Bluetooth/BSN/src/: Simple_nrf_radio.cpp  Timer_sync.c  bm_blemesh.c  bm_blemesh_model_handler.c  bm_cli.c  bm_cli_cmds.c  bm_control.c  bm_log.c  bm_radio.c  bm_rand.c  bm_report.c  bm_simple_buttons_and_leds.c  bm_statemachine.c  bm_timesync.c  main.c  main.cpp  model_handler.c  simple_buttons_and_leds.c
Openthread/: README.md
P2P/: CMakeLists.txt  README.md  build.cmd  nrf52840dk_nrf52840.overlay__  nrf52840dongle_nrf52840.overlay  nrf52840dongle_nrf52840.overlay__  prj.conf
P2P/Webserver/: README.md
P2P/Webserver/dashboard/: manage.py
P2P/Webserver/dashboard/dashboard/: urls.py
P2P/Webserver/dashboard/p2p/: views.py
P2P/Webserver/dashboard/p2p/static/iconfont/: material-icons.css
P2P/Webserver/dashboard/p2p/templates/p2p/: chart.html
P2P/Webserver/mvenv/Scripts/: activate  activate.bat
P2P/Webserver/p2p_webserver/: manage.py
P2P/Webserver/p2p_webserver/myvenv/Scripts/: activate  activate.bat  futurize-script.py  miniterm.py
P2P/Webserver/p2p_webserver/p2p/: forms.py  models.py  views.py
P2P/Webserver/p2p_webserver/p2p/migrations/: 0005_channel_node.py  0007_auto_20200723_0925.py  0011_auto_20200723_1149.py  0012_channel_node.py  0013_auto_20200728_1651.py
P2P/Webserver/p2p_webserver/p2p/templates/p2p/: base_p2p.html  chart.html  node_list.html
P2P/Webserver/p2p_webserver/p2p_site/: asgi.py
P2P/include/: Simple_nrf_radio.h  Timer_sync.h
P2P/prebuilt_binaries/: Master_PCA10056.hex  Slave_PCA10056.hex
P2P/src/: Simple_nrf_radio.cpp  Simple_nrf_radio.h  Timer_sync.c  bm_master.cpp  main.cpp  nrfx_timer_example_code.cpp
SharedLib/: bm_cli.c  bm_cli.h  bm_cli_cmds.c  bm_control.c  bm_control.h  bm_flash_save.c  bm_flash_save.h  bm_log.c  bm_log.h  bm_radio.c  bm_radio.h  bm_rand.c  (+11 more)
Zigbee/light_bulb/: CMakeLists.txt
Zigbee/light_bulb/src/: main.c
Zigbee/nrf_connect_zigbee/light_bulb/: CMakeLists.txt  prj.conf
Zigbee/nrf_connect_zigbee/light_bulb/src/: main.c
(+1243 files in other folders)
